# CalcApp

./: CMakeLists.txt  README.md  addition_test.c
src/: calcapp.h  calcapp_pch.cpp  calcapp_pch.h  main.cpp  testing_stuff.cpp
